[package]
name = "acuity-dex-app"
version = "0.1.0"
authors = ["Jonathan Brown <jbrown@acuity.network>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
