[package]
name = "acuity-dex-app"
version = "0.1.0"
authors = ["Jonathan Brown <jbrown@acuity.network>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.5.3", default-features = false, features = ["provider-ws"] }
alloy-transport = { version = "0.5.3", default-features = false, features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
futures-util = "0.3.31"
